WIP: does pull twice

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,8 @@ akka {
 }
 
 xmas-tree-server {
-  retailer = ${RETAILER}
-  token = ${TOKEN}
+  retailer = aho
+  //retailer = ${RETAILER}
+  token = gimmeToken
+  //token = ${TOKEN}
 }
